tests/sum-types/ill-typed/bad-sum-types-6.stella
language core;
extend with #sum-types;

fn g(x : Nat + Bool) -> Nat {
  return match x {

  }
}

fn main(x : Nat) -> Nat {
  return g(inr(false))
}
